# rustforge

./: Cargo.toml  Dockerfile  codebase.md  docker-compose.dev.yml  docker-compose.yml
crates/codev-cli/src/: main.rs
crates/codev-cli/src/commands/: mod.rs
crates/codev-core/: Cargo.toml
crates/codev-core/src/: config.rs  engine.rs  lib.rs
crates/codev-core/src/ai/: engine.rs  manager.rs  mod.rs  streaming.rs
crates/codev-core/src/ai/providers/: claude.rs  gemini.rs  mistral.rs  mod.rs  ollama.rs  openai.rs
crates/codev-core/src/analysis/: analyzer.rs  metrics.rs  mod.rs  parser.rs  project.rs
crates/codev-core/src/config/: mod.rs
crates/codev-core/src/git/: mod.rs
crates/codev-core/src/llm/: claude.rs  gemini.rs  mistral.rs  mod.rs  ollama.rs  openai.rs
crates/codev-core/src/project/: mod.rs
crates/codev-core/src/security/: mod.rs
crates/codev-core/src/template/: mod.rs
crates/codev-shared/: Cargo.toml
crates/codev-shared/src/: config.rs  error.rs  lib.rs  types.rs
scripts/: entrypoint.sh  ollama-init.sh  setup-dev.sh
