[workspace]
members = [
    "crates/codev-core",
    "crates/codev-cli",
    "crates/codev-shared"
, "crates/codev-core/Cargo"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["cedricbb <hitokiri.angel@gmail.com>"]
license = "MIT"
repository = "https://github.com/cedricbb/codev.rs"
homepage = "https://codev-rs.com"
description = "Codev.rs - Agent IA d'assistance au développement"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client for LLM communication
reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
toml = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"

# Testing
mockall = "0.12"
criterion = "0.5"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
